[project]
name = "live-chat"
version = "0.1.0"
description = "live chat for group and private chat"
authors = [
    {name = "AlexdeJesusFS",email = "alexjesus0116@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "h11 (==0.16.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pre-commit = "^4.2.0"
pip-audit = "^2.8.0"
mypy = "^1.15.0"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["fastapi.*", "uvicorn.*"]
ignore_missing_imports = true
